fix win message z-index

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,8 @@ html {
   font-size: 74px;
   text-align: center;
   color: #f5f5f5;
-  top: 210px;
+  top: 110px;
+  z-index: 2;
 }
 
 .board {
